<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="376dp"
            android:layout_height="150dp"
            android:text="@string/singapore_xchange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintVertical_bias="0.022"
            android:layout_marginTop="16dp" android:textColor="#2196F3" android:textSize="24sp"
            android:textStyle="bold" android:gravity="center" android:id="@+id/heading"/>
    <TextView
            android:text="@string/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heading2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/heading" app:layout_constraintStart_toStartOf="@+id/heading"
            app:layout_constraintEnd_toEndOf="@+id/heading" android:textSize="18sp" android:textColor="#3F51B5"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/heading2"
            app:layout_constraintStart_toStartOf="@+id/heading2" app:layout_constraintEnd_toEndOf="@+id/heading2"
            android:autofillHints="" android:hint="@string/name"/>
    <Button
            android:text="@string/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintStart_toStartOf="@+id/editText"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText" app:layout_constraintEnd_toEndOf="@+id/editText"
            android:onClick="apiCall"/>
    <TextView
            android:text="@string/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/outputINR" app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button" android:textSize="24sp"/>
    <TextView
            android:text="@string/Footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/footer" app:layout_constraintStart_toStartOf="@+id/heading"
            app:layout_constraintEnd_toEndOf="@+id/heading" app:layout_constraintHorizontal_bias="0.006"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/outputINR"
            android:textColor="#2196F3" android:textSize="18sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>